--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = sparkfun/SparkFun SCD30 Arduino Library@^1.0.20
+lib_deps = 
+	sparkfun/SparkFun SCD30 Arduino Library@^1.0.20
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
