--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	sparkfun/SparkFun SCD30 Arduino Library@^1.0.20
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	adafruit/Adafruit Unified Sensor@^1.1.15
